--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
-	<TextView
-		android:id="@+id/TextView01"
-		android:layout_width="fill_parent"
-        android:layout_height="wrap_content"/>
- </RelativeLayout>       
+    <TextView android:layout_width="wrap_content" android:id="@+id/GPS_Locations" android:text="@string/app_name" android:layout_height="match_parent" android:layout_gravity="center_vertical"></TextView>
+    <Button android:id="@+id/Quit" android:layout_width="wrap_content" android:text="@string/Quit" android:layout_height="wrap_content"></Button>
+ </LinearLayout>       
