--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,4 +4,5 @@
     android:layout_height="fill_parent">
     <TextView android:layout_width="wrap_content" android:id="@+id/GPS_Locations" android:text="@string/app_name" android:layout_height="match_parent" android:layout_gravity="center_vertical"></TextView>
     <Button android:id="@+id/Quit" android:layout_width="wrap_content" android:text="@string/Quit" android:layout_height="wrap_content"></Button>
+    <Button android:id="@+id/Next_Screen" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/Next"></Button>
  </LinearLayout>       
